# rasterization-in-one-weekend

./: .gitignore  Cargo.toml  README.md
benches/: triangle_rasterization.rs
src/: clipping.rs  color.rs  framebuffer.rs  image.rs  lib.rs  main.rs  model.rs  pipeline.rs  rasterization.rs  sampler.rs  shaders.rs  triangulation.rs  vertex.rs  viewport.rs
