[package]
name = "rasterization-in-a-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.27.0"
nalgebra-glm = "0.18.0"
num = "0.4.1"

[dependencies.simba]
version = "0.8.1"
features = ["partial_fixed_point_support"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "triangle_rasterization"
harness = false
